Completed current EduGD implementation changes
